--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<body>
 
-<%= yield %>
+		<%= render 'layouts/header' %>
 
+		<%= yield %>
+
+		<%= render 'layouts/footer' %>
+
+	</body>
 </body>
 </html>
