--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,9 @@
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
 				<% if !@current_user.id.nil? %>
-						<li><a href="">Create New Event</a></li>
-				    <li><a href="">Upcoming Events</a></li>
-					<li><a href="">Logout</a></li>
+						<li><a href="/event/new">Create New Event</a></li>
+				    <li><a href="/event/show">Upcoming Events</a></li>
+					<li><a href="user/destroy">Logout</a></li>
 				<% else  %>
 				 	<li><a href="">Log In</a></li>
 				 	<li><a href="">Register </a></li>
