fixed singular controller name to plural whoops

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,12 +6,12 @@
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
 				<% if !@current_user.id.nil? %>
-						<li><a href="/event/new">Create New Event</a></li>
-				    <li><a href="/event/show">Upcoming Events</a></li>
+						<li><a href="/events" >Create New Event</a></li>
+				    <li><a href="/event/show" >Upcoming Events</a></li>
 					<li><a href="user/destroy">Logout</a></li>
 				<% else  %>
-				 	<li><a href="">Log In</a></li>
-				 	<li><a href="">Register </a></li>
+				 	<li><a href="/users">Log In</a></li>
+				 	<li><a href="/users/create">Register </a></li>
 				<% end %>
 			</ul>
 	  </div>
