login going to correct page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 				    <li><a href="/event/show" >Upcoming Events</a></li>
 					<li><a href="user/destroy">Logout</a></li>
 				<% else  %>
-				 	<li><a href="/users">Log In</a></li>
+				 	<li><a href="/users/new">Log In</a></li>
 				 	<li><a href="/users/create">Register </a></li>
 				<% end %>
 			</ul>
