--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,1 +1,23 @@
-<h1>Hello Students!/h1>
+<h1>Hello Student Please check-in!</h1>
+
+
+
+<div class="container bottom_space">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+    <% flash.each do |message_type, message| %>
+	<div class="text-center bg-<%= message_type %>"><%= message %></div>
+			<% end %>		
+        <%= form_for(@student, url:{controller: "checkin", action: "create"}, :html => {:class => "form-group" }) do |f| %>
+
+          <%= f.label :email, class: "label-padding" %>
+          <%= f.text_field :email, class: 'form-control' %>
+
+          <%= f.label :email_confirmation, class: "label-padding" %>
+          <%= f.text_field :email_confirmation, class: "form-control input-sm" %>
+
+          <%= f.submit "Submit", class: "btn button_top_margin btn-primary" %>
+        <% end %>
+    </div>
+  </div>
+</div>
