--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6 col-md-offset-3">
       <h2 class="text-center">What are the details?</h2>
 
-      <%= form_for(@student, url: {action: "create"}) do |f| %>
+      <%= form_for @student do |f| %>
 
         <%= f.label :email %>
         <%= f.text_field :email, class: 'form-control' %>
