--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
         <%= f.text_field :username, class: 'form-control' %>
 
         <%= f.label :password %>
-        <%= f.password_field :password_digest, class: 'form-control' %>
+        <%= f.password_field :password, class: 'form-control' %>
 
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
