--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,24 @@
-<div class="container bottom_space">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
 
-      <%= form_for @current_user do |f| %>
-        
-        <%= f.label :username %>
-        <%= f.text_field :username, class: 'form-control' %>
+<h1> Register Admin </h1>
 
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
 
-        <%= f.label :password_confirmation, "Confirmation" %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+    <%= form_for(@current_user) do |f| %>
+      
+      <%= f.label :username %>
+      <%= f.text_field :username %>
 
-        <%= f.submit "Submit", class: "btn button_margin btn-primary" %>
-      <% end %>
-    </div>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create Admin", class: "btn btn-primary"%>
+    <% end %>
   </div>
 </div>
