replaced every instance of username with name

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,1 @@
-This is the admin login page content <%= @user.username %>, <%= @user.email %>
+This is the admin login page content <%= @user.name %>, <%= @user.email %>
