--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,8 +6,8 @@
 
     <%= form_for(@current_user) do |f| %>
       
-      <%= f.label :username %>
-      <%= f.text_field :username %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
       <%= f.label :email %>
       <%= f.email_field :email %>
