--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,7 +39,7 @@
 							<tr class="movie_row">
 							  <td><%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 									<%= movie_f.text_field :title, placeholder: "movie name", class: 'form-control movie_name'%></td>
-								<td><%= movie_f.text_field :time, placeholder: "movie time", class: 'form-control'%></td>
+								<td><%= movie_f.time_field :time, placeholder: "movie time", class: 'form-control'%></td>
 								<td><%= movie_f.text_field :delete, :value => "0", class: 'collapse delete_row'%>
 								<%= movie_f.number_field :event_id, class: 'collapse form-control event_id'%>
 								<span class="glyphicon glyphicon-remove text-danger remove_movie" role="button"></span></td>
@@ -51,3 +51,4 @@
 		<button class="btn btn-default" name="commit" type='submit'>Save Movies<span class="glyphicon glyphicon-save"></span></button>
 	</form>
 </div>
+
