login route changing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,9 @@
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
 				<% if !@current_user.id.nil? %>
-						<li><a href="/events" >Create New Event</a></li>
-				    <li><a href="/event/show" >Upcoming Events</a></li>
-					<li><a href="user/destroy">Logout</a></li>
+					<li><a href="/events" >Create New Event</a></li>
+				  <li><a href="/event/show" >Upcoming Events</a></li>
+					<li><%= link_to "Log out", logout_path, method: "delete" %></li>
 				<% else  %>
 				 	<li><a href="/users/new">Log In</a></li>
 				 	<li><a href="/users/create">Register </a></li>
