--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container bottom_space">
+`<div class="container bottom_space">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h2 class="text-center">What are the details?</h2>
