--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,9 @@
 				 	<li><a href="/users/create">Register </a></li>
 				<% end %>
 			</ul>
+
+			<%= render 'layouts/error_messages' %>
+
 	  </div>
 	</nav>
 </header>
