--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,10 @@
 				<% if !@current_user.id.nil? %>
 					<li><a href="/events" >Create New Event</a></li>
 				  <li><a href="/event/show" >Upcoming Events</a></li>
-					<li><%= link_to "Log out", user_path, method: :delete %></li>
+					<li><a href="/logout">Logout</a></li>
 				<% else  %>
-				 	<li><a href="/users/new">Log In</a></li>
-				 	<li><a href="/users/create">Register </a></li>
+				 	<li><a href="/login">Log In</a></li>
+				 	<li><a href="/users/new">Register</a></li>
 				<% end %>
 			</ul>
 
