--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Register Admin </h1>
+<h1 class="text-center"> Register Admin </h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -6,16 +6,16 @@
     <%= form_for(@current_user) do |f| %>
       
       <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, class: 'form-control'%>
 
       <%= f.label :email %>
-      <%= f.email_field :email %>
+      <%= f.email_field :email, class: 'form-control'%>
 
       <%= f.label :password %>
-      <%= f.password_field :password %>
+      <%= f.password_field :password, class: 'form-control' %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.submit "Create Admin", class: "btn btn-primary"%>
     <% end %>
