--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 	      <a class="navbar-brand" href="/">Film Streams Student Night</a>
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
-				<% if !@current_user.id.nil? %>
+				<% if load_current_user %>
 					<li><a href="/events" >Create New Event</a></li>
 				  <li><a href="/event/show" >Upcoming Events</a></li>
 					<li><%= link_to "Log out", users_path, method: "delete" %></li>
