--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Hello Events!</h1>
+<h1>Hello Admin, Master of the Universe, he who creates all thy masterful events, let it be known</h1>
+
+<%= button_to "Upcoming Events", events_path, :method => "get", class: "btn-lg btn-default" %>
+
+<%= button_to "View Event Statistics", attendances_path, :method => "get", class: "btn-lg btn-default" %>
