--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<% if @current_user.errors.any? %>
+<% if @current_user && @current_user.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
       The form contains <%= pluralize(@current_user.errors.count, "error") %>.
