--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,9 +14,8 @@
 				 	<li><a href="/users/new">Register</a></li>
 				<% end %>
 			</ul>
-
-			<%= render 'layouts/error_messages' %>
-
 	  </div>
 	</nav>
 </header>
+<%= render 'layouts/error_messages' %>
+<%= render 'layouts/flashes' %>'
