--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -3,7 +3,8 @@
     <div class="col-md-6 col-md-offset-3">
 
       <%= render 'layouts/error_messages' %>
-      <%= form_for(@current_user, url:{controller: "login", action: "create"}) do |f| %>
+
+      <%= form_for :user do |f| %>
 
         <%= f.label :email  %>
         <%= f.text_field :email, class: 'form-control' %>
