--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,8 @@
 				<% end %>
 			</ul>
 
-			<%= render 'layouts/error_messages' %>
-
+<!-- 		 render 'layouts/error_messages'
+ -->
 	  </div>
 	</nav>
 </header>
