fixed error pages

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h2 class="text-center">Please make sure all fields are filled</h2>
-      <%= render 'layouts/errors' %>
+      <%= render 'layouts/student_errors' %>
       <%= form_for @student do |f| %>
 
         <%= f.label :email %>
