--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,7 +3,7 @@
 	  <div class="row">
 	    <div class="col-md-6 col-md-offset-3">
 	      <h2 class="text-center">What are the details?</h2>
-
+	       <%= render 'layouts/event_errors' %>
 	      <%= form_for @event do |f| %>
 
 	        <%= f.label :title %>
