--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 	      <a class="navbar-brand" href="/">Film Streams Student Night</a>
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
-				<% if load_current_user %>
+				<% if !session[:user_id].nil? %>
 					<li><a href="/events" >Create New Event</a></li>
 				  <li><a href="/event/show" >Upcoming Events</a></li>
 					<li><a href="/logout">Logout</a></li>
@@ -19,3 +19,4 @@
 </header>
 <%= render 'layouts/error_messages' %>
 <%= render 'layouts/flashes' %>
+<%= session[:user_id] %>
