--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6 col-md-offset-3">
       <h2 class="text-center">Please make sure all fields are filled</h2>
       <%= render 'layouts/student_errors' %>
-      <%= form_for @student do |f| %>
+      <%= form_for @checkin.student do |f| %>
 
         <%= f.label :email %>
         <%= f.text_field :email, class: 'form-control' %>
