--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,12 +1,13 @@
 
 <div class="container">
-	<form action="/attendances" method="post">
+	<form controller="attendances"  action="create" method="post">"
+		<input name="event_id" type="hidden" value="<%= @event.id %>">
+		<input name="student_id" type="hidden" value="<%= @student_id %>">
 	  <h4> Which Movie are you seeing </h4>
 	  <% @event.movies.each do |movie| %> 
 	    <%= radio_button_tag(:movie_id, movie.id) %>
 	    <%= label_tag(:movie_time, (Time.parse(movie.time.to_s).strftime('%l:%M'' %P')) ) %>
 	    <%= label_tag(:movie_tile, movie.title ) %><br>
-	    <input name="student_id" type="hidden" value="<%= @student_id %>">
 	  <% end %>
 	  <button class="btn btn-success button_margin" name="commit" type='submit'>Finish</button>
 	</form>
