--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,30 @@
-<!-- FORM FOR CREATING A NEW STUDENT -->
+<!-- FORM FOR CREATING A NEW STUDENT --><div class="container bottom_space">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h2 class="text-center">Please make sure all fields are filled</h2>
+      <%= render 'layouts/student_errors' %>
+      <%= form_for(@student, url:{controller: "students", action: "create"}) do |f| %>
+
+        <%= f.label :email %>
+        <%= f.text_field :email, class: 'form-control' %>
+
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control' %>
+
+        <%= f.label :school %>
+        <%= f.text_field :school, class: 'form-control' %>
+
+        <%= f.label :year %>
+        <%= f.text_field :year, class: 'form-control' %>
+
+        <%= f.label :zip %>
+        <%= f.text_field :zip, class: 'form-control' %>
+
+        <%= f.label :referral %>
+        <%= f.text_field :referral, class: 'form-control' %>
+
+        <%= f.submit "Save Student", class: "btn btn-primary button_margin" %>
+      <% end %>
+    </div>
+  </div>
+</div>
