--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
 
-       <%= form_for(:checkin, url:{controller: "checkins", action: "create"}) do |f| %>
+       <%= form_for([@event, @checkin]) do |f| %>
 
         <%= f.text_field :email, class: 'form-control' %>
 
