added stats controller to define views

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= button_to "Upcoming Events", events_path, :method => "get", class: "btn-lg btn-default" %>
 
-<%= button_to "View Event Statistics", attendances_path, :method => "get", class: "btn-lg btn-default" %>
+<%= button_to "View All Events Statistics", stats_path  :method => "get", class: "btn-lg btn-default" %>
