--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -13,18 +13,18 @@
         <%= f.text_field :name, class: 'form-control' %>
 
         <%= f.label :year %>
-        <%= f.select( :year, Student.years.map { |key, value| [key.humanize, key] }, 
+        <%= f.select( :year, Student.years.map { |key, value| [key, key] }, 
         {include_blank: "Select Year"},{ :class => 'form-control' })%>
 
         <%= f.label :school %>
-        <%= f.select( :school, Student.schools.map { |key, value| [key.humanize, key] }, 
+        <%= f.select( :school, Student.schools.map { |key, value| [key, key] }, 
         {include_blank: "Select School"},{ :class => 'form-control' })%>
 
         <%= f.label :zip %>
         <%= f.text_field :zip, class: 'form-control' %>
 
         <%= f.label :referral %>
-        <%= f.select( :referral, Student.referrals.map { |key, value| [key.humanize, key] }, 
+        <%= f.select( :referral, Student.referrals.map { |key, value| [key, key] }, 
         {include_blank: "How did you hear about free movie night?"},{ :class => 'form-control' })%>
 
         <%= f.submit "Update Student", class: "btn btn-primary button_margin" %>
