mostly done with charts

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -33,5 +33,11 @@
 	<%= schools_by_date %>
 	<%= grade_by_date %>
 	<%= zip_by_date %>
+	<%= school_trends %>
+
+
+  <% school_trendswww = Student.joins(:attendances).select('attendances.created_at').group('students.school').group_by_month('attendances.created_at').count.each { |k| k[0][0] = Student.schools.key(k[0][0]) } %>
+	
+
 
 </div>
