--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
 				<% if !session[:user_id].nil? %>
 					<li><a href="/events/new" >Create New Event</a></li>
 				  <li><a href="/events" >Upcoming Events</a></li>
+				  <li><a href="/statistics" >Statistics</a></li>
 					<li><a href="/logout">Logout</a></li>
 				<% else  %>
 				 	<li><a href="/login">Log In</a></li>
