added sticky footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,3 @@
-TODO: sticky footer
+<footer class="site-footer">
+		<a href="https://allenwipf.github.io/">Allen</a> &amp; <a href="https://malastrumdominisui.github.io/">Mike</a> Productions
+</footer>
