--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,26 +1,34 @@
-<h1>Hello Admin, Master of the Universe</h1>
-<%= button_to "Create New Event", new_event_path,  :method => "get", class: "btn-lg btn-default" %>
-<%= button_to "View All Events Statistics", statistics_path,  :method => "get", class: "btn-lg btn-default" %>
-
-<% @events.each do |event| %>
-	<div class="row">
-		<div class="col-md-4">
-			<div>
-				<h1><%= (Time.parse(event.date.to_s).strftime('%a, %b %d, %Y ')) %></h1>
-			</div>
-			<div class="col-md-offset-5 text-left">
-				<h1><%= event.title.capitalize %></h1>
-				<!-- view edit delete buttons -->
-				<div class="row text-right">
-					<div class="btn-group btn-group">
-
-					<a href="events/<%= event.id %>" class="btn btn-default borderless">Edit<span class="glyphicon glyphicon-edit"></span>
-				  </a>
-
-					</div>
-					
-				</div>
-			</div>
-	  </div>
+<div class="container">
+	<h1 class = "text-center">Coming Soon</h1>
+	<div class = "btn-group">
+		<%= button_to "Create New Event", new_event_path,  :method => "get", class: "btn-lg btn-default" %>
+		<%= button_to "View All Events Statistics", statistics_path,  :method => "get", class: "btn-lg btn-default" %>		
 	</div>
-<% end %>
+
+
+	<% @events.each do |event| %>
+		<div class="row">
+			<div class="col-md-4">
+				<div>
+					<h1><%= (Time.parse(event.date.to_s).strftime('%a, %b %d, %Y ')) %></h1>
+				</div>
+				<div class="col-md-offset-5 text-left">
+					<h1><%= event.title.capitalize %></h1>
+					<!-- view edit delete buttons -->
+					<div class="row text-right">
+						<div class="btn-group">
+
+						<a href="events/<%= event.id %>" class="btn btn-default borderless">Edit<span class="glyphicon glyphicon-edit"></span>
+					  </a>
+					  <a href="events/<%= event.id %>/checkins/new" class="btn btn-default borderless">View<span class="glyphicon glyphicon-edit"></span>
+					  </a>
+
+
+						</div>
+						
+					</div>
+				</div>
+		  </div>
+		</div>
+	<% end %>	
+</div>
