--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="flashes text-center">
 	<% flash.each do |message_type, message| %>
 	  <div class="text-center bg-<%= message_type %>"><%= message %></div>
 	<% end %> 
