--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
 <footer class="site-footer">
-		<a href="https://allenwipf.github.io/">Allen</a> &amp; <a href="https://malastrumdominisui.github.io/">Mike</a> Productions
+		By <a href="http://omahacodeschool.com/">Omaha Code School</a>
+		<a href="/users/new"><span class="glyphicon-envelope pull-right"></span></a>
 </footer>
