--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,13 @@
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
 				<% if !session[:user_id].nil? %>
-					<li><a href="/events/new" >Create New Event</a></li>
 				  <li><a href="/events" >Upcoming Events</a></li>
-				  <li><a href="/statistics" >Statistics</a></li>
+					<li><a href="/events/new" >New Event</a></li>
+				  <li><a href="/statistics" >Stats</a></li>
 					<li><a href="/logout">Logout</a></li>
 				<% else  %>
 				 	<li><a href="/login">Log In</a></li>
-				 	<li><a href="/users/new">Register</a></li>
+				 	<li></li>
 				<% end %>
 			</ul>
 	  </div>
