--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 	<link rel="shortcut icon" href="http://www.filmstreams.org/wp-content/themes/filmstreams/inc/images/favicon.ico" />
 </head>
-	<body class="box noise vignette">
+	<body> <!-- class="noise vignette" -->
 		<div class="page-wrap">
 			<%= render 'layouts/header' %>
 
