--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,7 +22,7 @@
 
 
 	<div class="col-md-3">
-		<a class="btn btn-default share_button" href="/events/<%=@event.id%>/checkins/new" role="button">Shareable Link  <span class="glyphicon glyphicon-share"></span></a>
+		<a class="btn btn-default share_button" href="/events/<%=@event.id%>/checkins/new" role="button">Go To Student Sign In  <span class="glyphicon glyphicon-share"></span></a>
 
 		<%= button_to 'Delete Event', event_path(@event), class: 'btn btn-danger navbar-btn' , 
 		data: {:confirm => 'Are you sure? This will delete report information as well.'}, :method => :delete %>
