--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -9,6 +9,7 @@
 	    <%= label_tag(:movie_tile, movie.title ) %><br>
 	  <% end %>
 	  <button class="btn btn-success button_margin" name="commit" type='submit'>Finish</button>
+	  <%= link_to "Post", event_attendances_path, :method => :post %>
 	</form>
 </div>
 
