--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -8,7 +8,7 @@
 	    <%= label_tag(:movie_time, (Time.parse(movie.time.to_s).strftime('%l:%M'' %P')) ) %>
 	    <%= label_tag(:movie_tile, movie.title ) %><br>
 	  <% end %>
-	  <button class="btn btn-success button_margin" name="commit" type='submit'>Finish</button>
+	  <button class="btn btn-success button_margin" name="commit" type='submit'>Submit</button>
 	</form>
 </div>
 
