--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <footer class="site-footer">
-		By <a href="http://omahacodeschool.com/">Omaha Code School</a>
+		Site by <a href="http://omahacodeschool.com/">Omaha Code School</a>
 		<a href="/users/new"><span class="glyphicon-envelope pull-right"></span></a>
 </footer>
