--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -1,16 +1,22 @@
 <div class="container">
-  <h4 class="text-center">Check in and give us some feedback!</h4>
+  <h2 class="text-center">Hello!</h2>
+  <h4 class="text-center">Let's get you checked in.</h4>
+  <hr>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
 
        <%= form_for([@event, @checkin]) do |f| %>
-        <%= f.label :email, class: "label-padding" %>
-        <%= f.text_field :email, class: 'form-control' %>
+        <div class="form-group">
+          <%= f.label :email, "Please enter your email address." %>
+          <%= f.text_field :email, class: 'form-control' %>
+        </div>
 
-        <%= f.label :email_confirmation, class: "label-padding" %>
-        <%= f.text_field :email_confirmation, class: "form-control" %>
+        <div class="form-group">
+          <%= f.label :email_confirmation, "Type in your email once more, to confirm." %>
+          <%= f.text_field :email_confirmation, class: "form-control" %>
+        </div>
 
-        <%= f.submit "Submit", class: "btn button_top_margin btn-primary" %>
+        <%= f.submit "Submit", class: "btn custom-btn" %>
       <% end %>
     </div>
   </div>
